[gd_scene load_steps=3 format=3 uid="uid://rqvqgo0gykxa"]

[ext_resource type="Script" uid="uid://c8knp2r1k1o4o" path="res://src/UI/level_up/level_up_ui.gd" id="1_2kicw"]
[ext_resource type="PackedScene" uid="uid://bm8bnk2h1d81y" path="res://src/UI/level_up/upgrade_option_card/upgrade_option_card.tscn" id="2_b1fuv"]

[node name="LevelUpUI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_2kicw")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -300.0
offset_top = -250.0
offset_right = 300.0
offset_bottom = 250.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer"]
custom_minimum_size = Vector2(500, 0)
layout_mode = 2
theme_override_constants/separation = 20

[node name="Label" type="Label" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 80
text = "Level Up!"
horizontal_alignment = 1
vertical_alignment = 1

[node name="UpgradeOptionCard" parent="PanelContainer/VBoxContainer" instance=ExtResource("2_b1fuv")]
layout_mode = 2

[node name="UpgradeOptionCard2" parent="PanelContainer/VBoxContainer" instance=ExtResource("2_b1fuv")]
layout_mode = 2

[node name="UpgradeOptionCard3" parent="PanelContainer/VBoxContainer" instance=ExtResource("2_b1fuv")]
layout_mode = 2
